--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <style>
     pre .latex {  }
   </style>
+  <style>
+    u {
+      text-decoration: underline;
+      }
+  </style>
 </head>
 <body>
   <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/jumbotron.jpg);">
@@ -554,7 +559,7 @@
 <!-- Insert plotly of 5bus PJM HBF-BF -->
 
 <div>
-      <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+      <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
       <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
 </div>
 
@@ -568,7 +573,7 @@
 
 </section>
 <div>
-    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
 </div>
 
@@ -761,7 +766,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Accuracy&nbsp;</p>
+            <div class="col-xs-12 lead"><u>Accuracy&nbsp;</u>
               <p>Comparision between results from pure brute force and combine heuristic-brute force</p>
               <p>MAE ($/MWhr)</p>
               <div lang="latex" class="container text-xs-center">MAE=\frac{1}{N}\sum_{i=1}^{N}|p_{i}-\hat{p}_{i}|</div>
@@ -786,7 +791,7 @@
                 </tr>
               </table>
 
-              <p>Speed-up performance</p>
+              <u>Speed-up performance</u>
               <p>The speed-up performance shows time reduction in percentage. The base calculation time are 65.67 and 1203.06 seconds for PJM 5 bus system and IEEE 118 bus system, respectively.</p>
               <table style="width:100%">
                 <tr>
@@ -904,17 +909,16 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-p" data-rv-view="73" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
+<section class="mbr-section article mbr-section__container" id="content1-p" data-rv-view="73" style="background-color: rgb(255, 255, 255); padding-top: 320px; padding-bottom: 320px;">
     <div class="container">
         <div class="row">
+            <h3 class="mbr-section-title display-2">Simulation result</h3>
             <div class="col-xs-12 lead"><p>LMP announcement (table)</p></div>
         </div>
     </div>
-
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="testimonials3-i" data-rv-view="75" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="testimonials3-i" data-rv-view="75" style="background-image: url(assets/images/landscape2.jpg); padding-top: 320px; padding-bottom: 320px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -975,7 +979,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="85" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<!-- <section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="85" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -983,9 +987,30 @@
         </div>
     </div>
 
+</section> -->
+
+<section class="mbr-section article mbr-section__container" id="content1-p" data-rv-view="73" style="background-color: rgb(255, 255, 255); padding-top: 320px; padding-bottom: 320px;">
+    <div class="container">
+        <div class="row">
+            <h3 class="mbr-section-title display-2">List of conferences and publication</h3>
+            <p></p>
+            <div class="columns download">
+                      <ul>
+                         <a href="paper01.pdf" class="button" download><i class="fa fa-download"></i>Effects of High Penetration of Solar Rooftop PV on Short-Term Electricity Pricing Forecasting by using ANN-ABC Hybrid Model; Case Study of South Australia</a>
+                      </il>
+            </div>
+            <div class="columns download">
+                      <ul>
+                         <a href="paper02.pdf" class="button" download><i class="fa fa-download"></i>Forecasting of monthly electricity generating for solar PV power plant
+            by using Python based AI; case study of Thialand</a>
+                      </il>
+        </div>
+    </div>
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-t" data-rv-view="87" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+</div>
+
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-t" data-rv-view="87" style="background-image: url(assets/images/desert.jpg); padding-top: 320px; padding-bottom: 320px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
