--- a/index.html
+++ b/index.html
@@ -913,7 +913,14 @@
     <div class="container">
         <div class="row">
             <h3 class="mbr-section-title display-2">Simulation result</h3>
-            <div class="col-xs-12 lead"><p>LMP announcement (table)</p></div>
+            <div class="col-xs-12 lead">
+              <p>The key points of the overall performance analysis are disscussed as below:</p>
+              <ul>The proposed combined heuristic and brute force approach can provide similar stair case LMP curve to pure brute force approach </ul>
+              <ul>The drawback of proposed combined heuristic-brute force approach is to decrease computational time of LMP sensitivity on load variation</ul>
+              <ul>The calculated LMP and LMP sensitivity due to load variation (from -20% ti +20%) can be announced to households (home agnets) through retail agents to encourage price based or incentive based (rewards and penalty) demand response program</ul>
+
+
+            </div>
         </div>
     </div>
 </section>
