--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <div class="col-xs-12 lead"><p>The LMP at bus i can be written as follows:</p>
               <div lang="latex" class="container text-xs-center">LMP_{i}=LMP^{energy}+LMP_{i}^{congestion}+LMP_{i}^{loss}</div>
               <p>The LMP at any bus also be calculated in:</p>
-              <div lang="latex" class="container text-xs-center"> LMP_{i}=\sum_{j=1}^{N} (C^{T} + \frac{\partial G_{j}}{\partial D_{j}}) </div>
+              <div lang="latex" class="container text-xs-center"> LMP_{i}=\sum_{j=1}^{N} (C^{T} \times \frac{\partial G_{j}}{\partial D_{j}}) </div>
             </div>
         </div>
     </div>
