--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </div>
     </div>
 </section>
-<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 320px; padding-bottom: 320px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -397,7 +397,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<!-- <section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -405,9 +405,9 @@
         </div>
     </div>
 
-</section> -->
+</section>  -->
 <!-- Simulation Result -->
-<section class="mbr-section mbr-section__container article" id="header3-e" data-rv-view="223" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-e" data-rv-view="223" style="background-color: rgb(255, 255, 255); padding-top: 320px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
