--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </div>
     </div>
 </section>
-<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 320px; padding-bottom: 320px;">
+<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 320px; padding-bottom: 120px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -821,7 +821,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Part II: PJM dayly load (office day and holyday)&nbsp;</p></div>
+            <div class="col-xs-12 lead"><p>Part II: PJM dayly load (office day and holiday)&nbsp;</p></div>
         </div>
     </div>
 
