--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                         <div class="mbr-table-cell">
 
                             <div class="container-slide">
-                                <img src="assets/images/lmp-sen-bus2-1600x900.png">
+                                <img src="LMP_sen_bus2(1).png">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-1">
 
@@ -867,7 +867,7 @@
                         <div class="mbr-table-cell">
 
                             <div class="container-slide">
-                                <img src="assets/images/lmp-sen-bus3-1600x900.png">
+                                <img src="LMP_sen_bus3(2).png">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-3 text-xs-right">
 
@@ -882,7 +882,7 @@
                         <div class="mbr-table-cell">
 
                             <div class="container-slide">
-                                <img src="assets/images/lmp-sen-bus4-1600x900.png">
+                                <img src="LMP_sen_bus4(1).png">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-3 text-xs-right">
 
